# IMMOBILIER

./: Makefile  README.md  pyproject.toml  requirements.txt
IMMOBILIER/: dataset.py
Projet/: apprentissage_pyspark.ipynb  idf_ventes.csv  nettoyage_pyspark.ipynb  scrap.py
Projet/dataset_final_immo_idf_parquet/: part-00000-585380ea-e17f-4d07-9daa-c5b7a26f85d7-c000.snappy.parquet
data/processed/dataset_final_immo_idf_parquet/: part-00000-856a5e54-f33d-49f4-ab3b-dffd0bf021a0-c000.snappy.parquet
data/raw/: idf_ventes.csv
notebooks/: apprentissage_pyspark.ipynb  nettoyage_pyspark.ipynb
